[metadata]
# replace with your username:
name = akkio-YOUR-USERNAME-HERE
version = 1.0.0
author = Abraham Parangi
author_email = abe@akk.io
description = Convenient access to the Akkio API from python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
