[metadata]
name = akkio
version = 1.0.4
author = Abraham Parangi
author_email = abe@akk.io
description = Convenient access to the Akkio API from python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akkio-inc/akkio-python
project_urls =
    Bug Tracker = https://github.com/akkio-inc/akkio-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
